--- a/themes/daria-day/sass/components/_flickity.scss
+++ b/themes/daria-day/sass/components/_flickity.scss
@@ -16,12 +16,20 @@ body { font-family: sans-serif; }
 
 .carousel-cell {
   width: 66%;
-  height: 380px ;
+  height: 40vh ;
   margin-right: 10px;
   background: #8C8;
   border-radius: 5px;
   // counter-increment: carousel-cell;
   overflow: hidden;
+  .quote-title {
+    font-size: 1.3em;
+    margin: 7%;
+    text-align: center;
+}.quote-body {
+    font-size:.9em;
+  }
+ 
 }
 
 /* cell number */
@@ -45,6 +53,31 @@ body { font-family: sans-serif; }
     
 }
 
+
+
 .flickity-button.flickity-prev-next-button.next{
     background-color: #269A65;
   }
+
+
+
+  @media screen and (min-width: 1024px) {
+    .carousel-cell {
+    .quote-title {
+      font-size:3em;
+  }.quote-body {
+      font-size:2em;
+    }
+  }
+  }
+  
+  @media screen and (min-width: 600px) {
+    .carousel-cell {
+    .quote-title {
+      font-size:2em;
+  }.quote-body {
+      font-size:1em;
+    }
+  }
+  }
+  
