--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -74,6 +74,7 @@ sass/
 @import 'layout/footer';
 @import 'layout/about';
 @import 'layout/front-latest';
+@import 'layout/front-video';  
 
 //Pages
 @import 'pages/about-us';
