--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -65,7 +65,8 @@ sass/
 @import 'hero.scss';
 
 // Components
-@import 'components/flickity';
+@import 'components/front-flickity';
+// @import 'components/flickity';
 
 // @import 'components/slider';
 // @import 'components/filter';
