--- a/themes/daria-day/sass/pages/_single-product.scss
+++ b/themes/daria-day/sass/pages/_single-product.scss
@@ -3,7 +3,10 @@
     text-decoration: none;
 
 }
-@media (max-width:700px){
+// body{
+//     color: red;
+// }
+@media (min-width:300px) and (max-width:500px) {
     .wps-products-img{
         height: 8.5em;
         width: 8.5em;
@@ -17,10 +20,42 @@
     }
 }
 
-@media (min-width:700px) and (max-width:1200px) {
+@media (max-width:300px) {
+    .wps-products-img{
+        height: 8.5em;
+        width: 8.5em;
+    }
+
+    .wps-product-gallery-imgs img{
+        transform: scale(2);
+    }
+    .wps-product-thumbs{
+        display: none;
+    }
+}
+@media (min-width:500px) and (max-width:700px) {
+    .wps-products-img{
+        height: 8.5em;
+        width: 8.5em;
+    }
+
+    .wps-product-gallery-imgs img{
+        transform: scale(1.4);
+    }
+    .wps-product-thumbs{
+        display: none;
+    }
+}
+
+@media (min-width:700px) and (max-width:1100px) {
     .wps-products-img{
         height: 16em;
         width: 16em;
     }
+    .wps-product-gallery-imgs img{
+        transform: scale(1.2);
+    }
+    .wps-product-thumbs{
+        display: none;
+    }
 }
-//600, 900, 1024
